--- a/views/signIn.ejs
+++ b/views/signIn.ejs
@@ -8,22 +8,104 @@
 </head>
 <body>
 <div class="sign">
-    <img src="/images/bg.jpg" class="bg-img">
+    <!--<img src="/images/bg.jpg" class="bg-img">-->
+    <p class="sign-title">校卖部</p>
     <div class="signBox-inner">
+        <p class="sign-bg"><img src="/images/sign.png"></p>
         <div class="sign">
-            <div class="signTitle">
-                <h1>校卖部</h1>
-            </div>
+            <p class="login-title">用户登陆</p>
             <div class="signText">
                 <form id="zcForm">
-                    用户名：<input type="text" id="username" name="username" class="signText-input"><br/>
-                    密&nbsp;&nbsp;&nbsp;码 ：<input type="password" id="password" name="password" class="signText-input"><br/>
-                    <button class="signIn signBtn">Sign in</button>
-                    <p class="toSignIn" id="toSignUp"><a href="/signUp" class="to-sign">>> to Sign up</a></p>
+                    用户名：<input type="text" id="username" name="username" class="signText-input"
+                            style="margin-top: 25px;"><br/>
+                    密&nbsp;&nbsp;&nbsp;码 ：<input type="password" id="password" name="password"
+                                                 class="signText-input"style="margin-top: 25px;"><br/>
+                    <button class="signIn signBtn">登 陆</button>
+                    <p class="toSignIn" id="toSignUp"><a href="/signUp" class="to-sign">>> 去注册</a></p>
                     <p id="warning"></p>
                 </form>
             </div>
         </div>
+        <!--<center>
+            <section id="rt-showcase-surround">
+                <div id="rt-showcase" class="slider-container rt-overlay-dark">
+                    <div class="rt-container slider-container">
+                        <div class="rt-grid-12 rt-alpha rt-omega">
+
+                            <link rel="stylesheet" href="/stylesheets/css/style.css">
+                            &lt;!&ndash;[if IE]><link rel="stylesheet" href="/stylesheets/css/ie.css"><![endif]&ndash;&gt;
+                            &lt;!&ndash;[if lte IE 9]><script type="text/javascript" src="/javascripts/ie.js"></script><![endif]&ndash;&gt;
+
+                            <div class="csslider1 autoplay">
+                                <input name="cs_anchor1" autocomplete="off" id="cs_slide1_0" type="radio" class="cs_anchor slide" >
+                                <input name="cs_anchor1" autocomplete="off" id="cs_slide1_1" type="radio" class="cs_anchor slide" >
+                                <input name="cs_anchor1" autocomplete="off" id="cs_slide1_2" type="radio" class="cs_anchor slide" >
+                                <input name="cs_anchor1" autocomplete="off" id="cs_play1" type="radio" class="cs_anchor" checked>
+                                <input name="cs_anchor1" autocomplete="off" id="cs_pause1" type="radio" class="cs_anchor" >
+                                <ul>
+                                    <div style="width: 100%;height: 100%; visibility: hidden; font-size: 0px; line-height: 0;">
+                                        <img src="http://gtms01.alicdn.com/tps/i1/TB1kmbvJVXXXXb1XXXXRebd4FXX-1190-600.png" style="width: 100%;">
+                                    </div>
+                                    <li class="num0 img">
+                                        <img src="http://gtms01.alicdn.com/tps/i1/TB1kmbvJVXXXXb1XXXXRebd4FXX-1190-600.png" alt="Clouds" title="Clouds" />
+                                    </li>
+                                    <li class="num1 img">
+                                        <img src="/images/slider5.jpg" alt="Typewriter" title="Typewriter" />
+                                    </li>
+                                    <li class="num2 img">
+                                        <img src="/images/slider6.jpg" alt="Bicycle" title="Bicycle" />
+                                    </li>
+
+                                </ul>
+                                &lt;!&ndash;<div class="cs_description">
+                                  <label class="num0">
+                                    <span class="cs_title"><span class="cs_wrapper">Clouds</span></span>
+
+                                  </label>
+                                  <label class="num1">
+                                    <span class="cs_title"><span class="cs_wrapper">Typewriter</span></span>
+
+                                  </label>
+                                  <label class="num2">
+                                    <span class="cs_title"><span class="cs_wrapper">Bicycle</span></span>
+
+                                  </label>
+                                </div>&ndash;&gt;
+
+                                <div class="cs_arrowprev">
+                                    <label class="num0" for="cs_slide1_0"></label>
+                                    <label class="num1" for="cs_slide1_1"></label>
+                                    <label class="num2" for="cs_slide1_2"></label>
+                                </div>
+                                <div class="cs_arrownext">
+                                    <label class="num0" for="cs_slide1_0"></label>
+                                    <label class="num1" for="cs_slide1_1"></label>
+                                    <label class="num2" for="cs_slide1_2"></label>
+                                </div>
+
+                                <div class="cs_bullets">
+                                    <label class="num0" for="cs_slide1_0">
+                                        <span class="cs_point"></span>
+                                        <span class="cs_thumb"><img src="/images/slider2.jpg" style="width: 50px;height: 50px;" /></span>
+                                    </label>
+                                    <label class="num1" for="cs_slide1_1">
+                                        <span class="cs_point"></span>
+                                        <span class="cs_thumb"><img src="/images/slider5.jpg" style="width: 50px;height: 50px;" /></span>
+                                    </label>
+                                    <label class="num2" for="cs_slide1_2">
+                                        <span class="cs_point"></span>
+                                        <span class="cs_thumb"><img src="/images/slider6.jpg" style="width: 50px;height: 50px;"/></span>
+                                    </label>
+                                </div>
+
+                            </div>
+
+                        </div>
+                        <div class="clear"></div>
+                    </div>
+                </div>
+            </section>        &lt;!&ndash; /slider &ndash;&gt;
+        </center>-->
     </div>
 </div>
 <script src="/vendor/jquery.js"></script>
