--- a/views/signUp.ejs
+++ b/views/signUp.ejs
@@ -8,20 +8,19 @@
 </head>
 <body>
 <div class="sign">
-    <img src="/images/bg.jpg" class="bg-img">
+    <p class="sign-title">校卖部</p>
     <div class="signBox-inner">
+        <p class="sign-bg"><img src="/images/sign.png"></p>
         <div class="sign">
-            <div class="signTitle">
-                <h1>校卖部</h1>
-            </div>
+            <p class="login-title">用户注册</p>
             <div class="signText">
                 <form id="signForm">
                     用 户 名&nbsp;：&nbsp;<input type="text" id="username" name="username"  class="signText-input"><br/>
                     用户邮箱：<input type="email" id="email" name="email"  class="signText-input"><br/>
                     密码设置：<input type="password" id="password" name="password"  class="signText-input"><br/>
                     重复密码：<input type="password" id="pswSure"  class="signText-input"><br/>
-                    <button class="signBtn signBtnUp signUp">Sign up</button>
-                    <p class="toSignIn" id="toSignIn"><a href="/signIn" class="to-sign">>> to Sign in</a></p>
+                    <button class="signBtn signBtnUp signUp">注 册</button>
+                    <p class="toSignIn" id="toSignIn"><a href="/signIn" class="to-sign">>> 去登陆</a></p>
                     <p id="warning"></p>
                 </form>
             </div>
