--- a/public/stylesheets/css/shopping.css
+++ b/public/stylesheets/css/shopping.css
@@ -16,9 +16,10 @@ body,div,ul,li,h1,h2,h3,h4,h5,h6,a,p,img{margin:0;padding:0;text-decoration: non
     height: auto;
     padding: 10px;
     border: 1px solid #e8edf1;
-    float: right;
+    /*float: right;*/
     color: #545652;
     box-sizing: border-box;
+    margin: 0 auto;
     margin-top: 10px;
 }
 .spC-r-correct{
@@ -57,8 +58,17 @@ body,div,ul,li,h1,h2,h3,h4,h5,h6,a,p,img{margin:0;padding:0;text-decoration: non
     border-bottom: 1px solid #e8edf1;
     margin-top: 15px;
 }
+.spC-list-ul .goodsLayout {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    background: lightgray;
+    opacity: 1;
+    position: absolute;
+    text-align: right;
+}
 .spC-list-goods{
-    width: 447px;
+    width: 347px;
     height: 100%;
     position: relative;
 }
@@ -78,10 +88,8 @@ body,div,ul,li,h1,h2,h3,h4,h5,h6,a,p,img{margin:0;padding:0;text-decoration: non
     margin-left: 10px;
 }
 .spC-list-goodsName{
-    width:300px;
-    +width:280px;
+    width:200px;
     height: 100%;
-    +height:100px;
     position: relative;
     font-size: 14px;
     padding: 10px;
@@ -341,7 +349,7 @@ body,div,ul,li,h1,h2,h3,h4,h5,h6,a,p,img{margin:0;padding:0;text-decoration: non
     width: 20px;
     height: 20px;
     position: relative;
-    background: url("../images/close.png") no-repeat;
+    background: url("../../images/close.png") no-repeat;
     overflow: hidden;
 }
 .layer-close:hover{
