--- a/views/orderClasses.ejs
+++ b/views/orderClasses.ejs
@@ -12,20 +12,35 @@
             <div class="h-r-left">
                 校卖部
             </div>
+
+            <p class="search-box"><input class="search-input" type="search" placeholder="请输入关键字">
+                <span class="search-btn">搜 索</span></p>
+
             <div class="h-right">
-                <p id="personName" class="h-r-userName"><%= username%></p><a class="exit fr" href="/signIn">退出登录</a>
-                <p><a href="/uploadOrder" class="h-r-input">发布商品</a>
-                    <input type="button" value="我的关注" class="h-r-input order-focus"/>
-                </p>
+                <div id="person_info" class="clearfix">
+                    <div class="avatar"></div>
+                    <div class="personal-center">
+                        <div class="center-nav">
+                            <p class="h-r-userName">欢迎，<%= username%></p>
+                            <p class="center-nav-list"><a href="/toCenter">个人中心</a></p>
+                            <p class="center-nav-list"><a href="/getCart">我的购物车</a></p>
+                            <p class="center-nav-list"><a href="/signIn">退出登录</a></p>
+                        </div>
+                    </div>
+                </div>
+                <!--<p id="personName" class="h-r-userName"><%= username%></p><a class="exit fr" href="/signIn">退出登录</a>
+        <p><a href="/uploadOrder" class="h-r-input">发布商品</a>
+          <input type="button" value="我的关注" class="h-r-input order-focus"/>
+        </p>-->
             </div>
         </div>
     </div>
     <div class="nav">
         <div class="nav-inner">
-            <ul class="nav-inner-ul order-class-nav">
+            <ul class="nav-inner-ul order-class-nav" style="width: 1024px;">
                 <li><a href="/index">首页</a></li>
-                <li><a href="/classSearch0">图书</a></li>
                 <li><a href="/classSearch1">服装</a></li>
+                <li><a href="/classSearch0">图书</a></li>
                 <li><a href="/classSearch2">美食</a></li>
                 <li><a href="/classSearch3">生活学习</a></li>
                 <li><a href="/classSearch4">礼物饰品</a></li>
@@ -34,7 +49,6 @@
         </div>
     </div>
     <div class="content">
-        <div class="content-inner">
             <div class="content-part2">
                 <div class="c-part2-inner">
                     <p class="search-tip">
@@ -42,6 +56,14 @@
                     </p>
                     <p class="tips-box">
 
+                    </p>
+                    <p class="sort-box">
+                        <span>排 序：</span>
+                        <span class="sort-tip">默认</span>
+                        <span class="sort-tip">时间</span>
+                        <span class="sort-tip">价格从高到低</span>
+                        <span class="sort-tip">价格从低到高</span>
+                        <span class="sort-tip">关注度</span>
                     </p>
                     <div class="c-part2-new">
                         <ul class="c-part2-new-ul" id="orderClassList">
@@ -61,7 +83,6 @@
                     </div>
                 </div>
             </div>
-        </div>
     </div>
 </div>
 <script src="/vendor/jquery.js"></script>
