--- a/views/orderDetail.ejs
+++ b/views/orderDetail.ejs
@@ -6,26 +6,41 @@
     <link rel='stylesheet' href='/stylesheets/css/main.css' />
 </head>
 <body>
-<div id="box" class="index">
+<div class="index upload-order">
     <div class="head">
         <div class="head-inner">
             <div class="h-r-left">
                 校卖部
             </div>
+
+            <p class="search-box"><input class="search-input" type="search" placeholder="请输入关键字">
+                <span class="search-btn">搜 索</span></p>
+
             <div class="h-right">
-                <p id="personName" class="h-r-userName"><%= username%></p><a class="exit fr" href="/signIn">退出登录</a>
-                <p><a href="/uploadOrder" class="h-r-input">发布商品</a>
-                    <input type="button" value="我的关注" class="h-r-input order-focus"/>
-                </p>
+                <div id="person_info" class="clearfix">
+                    <div class="avatar"></div>
+                    <div class="personal-center">
+                        <div class="center-nav">
+                            <p class="h-r-userName">欢迎，<%= username%></p>
+                            <p class="center-nav-list"><a href="/toCenter">个人中心</a></p>
+                            <p class="center-nav-list"><a href="/getCart">我的购物车</a></p>
+                            <p class="center-nav-list"><a href="/signIn">退出登录</a></p>
+                        </div>
+                    </div>
+                </div>
+                <!--<p id="personName" class="h-r-userName"><%= username%></p><a class="exit fr" href="/signIn">退出登录</a>
+        <p><a href="/uploadOrder" class="h-r-input">发布商品</a>
+          <input type="button" value="我的关注" class="h-r-input order-focus"/>
+        </p>-->
             </div>
         </div>
     </div>
     <div class="nav">
         <div class="nav-inner">
-            <ul class="nav-inner-ul order-class-nav">
+            <ul class="nav-inner-ul order-class-nav" style="width: 1100px;">
                 <li><a href="/index">首页</a></li>
-                <li><a href="/classSearch0">图书</a></li>
                 <li><a href="/classSearch1">服装</a></li>
+                <li><a href="/classSearch0">图书</a></li>
                 <li><a href="/classSearch2">美食</a></li>
                 <li><a href="/classSearch3">生活学习</a></li>
                 <li><a href="/classSearch4">礼物饰品</a></li>
@@ -43,7 +58,7 @@
                     <div class="c-part1-main">
                         <form>
                             <span class="orderId" style="display: none;"><%= goods._id %></span>
-                            <p class="c-goods-username">&nbsp;<%= goods.username%>&nbsp;<span class="c-goods-username-span">发布</span></p>
+                            <p class="c-goods-username"><span class="goods-username">&nbsp;<%= goods.username%>&nbsp;</span><span class="c-goods-username-span">发布</span></p>
                             <p class="c-goods-price">￥<%= goods.price%><span class="c-goods-price-span">元</span></p>
                             <p class="c-goods-goodsName"><%= goods.goodsName%></p>
                             <div class="c-goods-describe">
@@ -61,6 +76,31 @@
                 </div>
 
                 <div class="c-part1-right recommend"></div>
+
+            </div>
+        </div>
+    </div>
+    <div class="comment-box">
+        <div class="comment-inner">
+            <p class="comment-head">
+                商品评论
+                <span class="cmt">写评论</span>
+            </p>
+            <div class="comment-write">
+                <textarea class="cmt-write"></textarea>
+                <input type="button" value="评 论" gid="{$goodsinfo.gid}" class="cmt-btn" id="cmt-btn" required="required">
+            </div>
+            </p>
+
+            <div class="comment-content">
+
+                {foreach from=$comments item=comment}
+                <p class="comment-list">
+                    <span class="cmt-list-content">{$comment.content}</span>
+                    <span class="cmt-list-time cmt-list-other">{$comment.time}</span><span class="cmt-list-neme cmt-list-other">{$comment.uname}</span>
+                </p>
+                {/foreach}
+
 
             </div>
         </div>
