--- a/views/uploadOrder.ejs
+++ b/views/uploadOrder.ejs
@@ -7,73 +7,104 @@
     <link rel='stylesheet' href='/stylesheets/css/main.css' />
 </head>
 <body>
-    <div class="upload-order">
-        <div id="box">
-            <div class="head">
-                <div class="head-inner">
-                    <div class="h-r-left">
-                        校卖部
-                    </div>
-                    <div class="h-right">
-                        <p id="personName" class="h-r-userName"><%= username %></p>
-                        <a class="exit fr" href="/signIn">退出登录</a>
-                        <p><input type="button" value="发布商品" class="h-r-input" onclick="getOrder()"/>
-                            <input type="button" value="我的关注" class="h-r-input order-focus"/>
-                        </p>
+<div class="index upload-order">
+    <div class="head">
+        <div class="head-inner">
+            <div class="h-r-left">
+                校卖部
+            </div>
+
+            <p class="search-box"><input class="search-input" type="search" placeholder="请输入关键字">
+                <span class="search-btn">搜 索</span></p>
+
+            <div class="h-right">
+                <div id="person_info" class="clearfix">
+                    <div class="avatar"></div>
+                    <div class="personal-center">
+                        <div class="center-nav">
+                            <p class="h-r-userName">欢迎，<%= username%></p>
+                            <p class="center-nav-list"><a href="/toCenter">个人中心</a></p>
+                            <p class="center-nav-list"><a href="/getCart">我的购物车</a></p>
+                            <p class="center-nav-list"><a href="/signIn">退出登录</a></p>
+                        </div>
                     </div>
                 </div>
+                <!--<p id="personName" class="h-r-userName"><%= username%></p><a class="exit fr" href="/signIn">退出登录</a>
+        <p><a href="/uploadOrder" class="h-r-input">发布商品</a>
+          <input type="button" value="我的关注" class="h-r-input order-focus"/>
+        </p>-->
             </div>
-            <p class="lin"></p>
-            <div class="content">
+        </div>
+    </div>
+    <div class="nav">
+        <div class="nav-inner">
+            <ul class="nav-inner-ul order-class-nav">
+                <li class="all-class">个人中心</li>
+                <li><a href="/index">首页</a></li>
+                <li><a href="/classSearch1">服装</a></li>
+                <li><a href="/classSearch0">图书</a></li>
+                <li><a href="/classSearch2">美食</a></li>
+                <li><a href="/classSearch3">生活学习</a></li>
+                <li><a href="/classSearch4">礼物饰品</a></li>
+                <li><a href="/classSearch5">运动娱乐</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="content">
+        <div class="content-part1">
                 <div class="c-left">
                     <ul class="c-l-ul">
-                        <li><a href="/index">首&nbsp;页</a></li>
+                        <li><a href="/toCenter">账户详情</a></li>
+                        <li><a href="#" class="order-focus">我的关注</a></li>
+                        <li><a href="#" class="order-focus">我的订单</a></li>
+                        <li><a href="/getCart">我的购物车</a></li>
                         <li><a href="/uploadOrder">发布商品</a></li>
                         <li><a href="/orderOnline">在线商品</a></li>
-                        <li><a href="#" class="order-focus">我的关注</a></li>
-                        <li><a href="/getCart">我的购物车</a></li>
+                        <li><a href="/orderOnline">已拍出商品</a></li>
                     </ul>
                 </div>
-                <div class="c-right">
-                    <h1>商品信息表</h1>
 
-                    <form id="orderForm" action="/upload" method="post" enctype='multipart/form-data'>
-                        <input class="nav hidden" id="personName" name="username" value="<%= username%>" onclick="" />
-                        <p class="c-r-from-p">
-                            商品名称：<input type="text" name="goodsName" id="goodsName">&nbsp;
-                            商品数量：<input type="text" name="num" id="num" class="textRight">&nbsp;
-                            商品单价：<input type="text" name="price" id="price" class="textRight"><br/>
-                        </p>
-                        <p class="c-r-from-p">
-                            联系方式：<input type="tel" name="tel" id="tel">&nbsp;
-                            Email：<input type="email" name="email" id="email">&nbsp;
-                        </p>
-                        <p class="c-r-from-p">
-                            商品分类：
-                            <select class="c-r-select orderClass" id="goodsCode" name="goodsCode">
+            <div class="c-right">
+                <h1 class="c-r-h1">发布商品</h1>
 
-                            </select>&nbsp;
+                <form id="orderForm" action="/upload" method="post" enctype='multipart/form-data'>
+                    <input class="nav hidden" id="personName" name="username" value="<%= username%>" onclick="" />
+                    <p class="c-r-from-p">
+                        商品名称：<input type="text" name="goodsName" id="goodsName">&nbsp;
+                        商品数量：<input type="text" name="num" id="num" class="textRight">&nbsp;
+                        商品单价：<input type="text" name="price" id="price" class="textRight"><br/>
+                    </p>
+                    <p class="c-r-from-p">
+                        联系方式：<input type="tel" name="tel" id="tel">&nbsp;
+                        Email：<input type="email" name="email" id="email">&nbsp;
+                    </p>
+                    <p class="c-r-from-p">
+                        商品分类：
+                        <select class="c-r-select orderClass" id="goodsCode" name="goodsCode">
 
-                            <select class="c-r-select orderClassChild optionChild" name="goodsChildCode">
+                        </select>&nbsp;
 
-                            </select>&nbsp;
+                        <select class="c-r-select orderClassChild optionChild" name="goodsChildCode">
 
-                            <select class="c-r-select optionGard optionChild" name="optionGardCode">
+                        </select>&nbsp;
 
-                            </select>&nbsp;
-                        </p>
-                        <p class="c-r-from-p">
-                            上传图片：
-                            <input id="fulAvatar" name="fulAvatar" type="file" class="form-control"/><br/>
-                        </p>
-                        <p class="c-r-from-p">商品描述：</p>
-                        <textarea class="c-r-txt" name="describe"></textarea>
-                        <span id="warning"><%= errMsg%></span>
-                        <input type="submit" value="发布商品" class="btn uploadOrder">
-                        </p>
-                    </form>
-                </div>
+                        <select class="c-r-select optionGard optionChild" name="optionGardCode">
+
+                        </select>&nbsp;
+                    </p>
+                    <p class="c-r-from-p">
+                        上传图片：
+                        <input id="fulAvatar" name="fulAvatar" type="file" class="form-control"/><br/>
+                    </p>
+                    <p class="c-r-from-p">商品描述：</p>
+                    <textarea class="c-r-txt" name="describe"></textarea>
+                    <span id="warning"><%= errMsg%></span>
+                    <input type="submit" value="发布商品" class="btn uploadOrder">
+                    </p>
+                </form>
             </div>
+
+        </div>
             <div class="hidLayer">
                 <div class="layer">
                     <div class="layer-inner">
